<resources>
    <string name="app_name">Hraj</string>
    <string name="description">Popis</string>
    <string name="players">Hráči</string>
    <string name="sort_ascending">Seřadit vzestupně podle počtu hráčů</string>
    <string name="sort_descending">Seřadit sestupně podle počtu hráčů</string>
    <string name="sorting_options">Možnosti řazení</string>
    <string name="search_title">Vyhledávání</string>
    <string name="search">Hledat</string>
    <string name="cancel">Zrušit</string>
    <string name="searching">Vyhledávání</string>
    <string name="option1_selected">Option 1 selected</string>
    <string name="option2_selected">Option 2 selected</string>
    <string name="option3_selected">Option 3 selected</string>
    <string name="no_results_found">Nic nenalezeno</string>
    <string name="add_game">Přidat hru</string>
    <string name="settings">Nastavení</string>
    <string name="game_title">Název hry</string>
    <string name="number_of_players">Počet hráčů</string>
    <string name="short_description">Krátký popis</string>
    <string name="full_description">Úplný popis</string>
    <string name="save">Uložit</string>
    <string name="difficulty">Obtížnost</string>
    <string name="toolbar_title">Hraj</string>
    <string name="back">Zpět</string>
    <string name="edit">Upravit</string>
    <string name="editOfTile">Úprava dlaždice</string>
</resources>