<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_players"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editNumOfPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_players"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editShortDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_description"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp" />
</LinearLayout>
